# spellchecker

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
documentation/: implementation_document.md  instructions_for_use.md  project_specification.md  testing_document.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/: config.py  index.py
src/entities/: node.py  trie.py
src/repositories/: spelling_error_repository.py  wordlist_repository.py
src/services/: alphabet_utils.py  distance_service.py  distance_service_class.py  distance_service_recursive.py  spellchecker_service.py
src/tests/: distance_service_test.py  performance_tester.py  performance_tests.py  spellchecker_service_test.py  spelling_error_parser.py  trie_test.py  wordlist_repository_test.py
