[tool.poetry]
name = "spellchecker"
version = "0.1.0"
description = ""
authors = ["Pia Manns <pia.manns@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
